force-app/main/default/objects/Dynamic_Field_Instructions__c/Dynamic_Field_Instructions__c.object-meta.xml
<CustomObject>
    <label>Dynamic Field Instructions</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Field Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>