force-app/main/default/objects/Dynamic_Field_Instructions__c/fields/Field_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Field_Analysis__c</fullName>
    <label>Field Analysis</label>
    <referenceTo>Dynamic_Field_Analysis__c</referenceTo>
    <relationshipLabel>Dynamic Field Instructions</relationshipLabel>
    <relationshipName>Dynamic_Field_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>