force-app/main/default/objects/Dynamic_Field_Instructions__c/fields/Instruction_Text__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Text__c</fullName>
    <label>Instruction</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>