force-app/main/default/objects/Dynamic_Field_Instructions__c/fields/Related_Fields__c.field-meta.xml
<CustomField>
    <fullName>Related_Fields__c</fullName>
    <label>Related Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>